RESOLVED FIXED 54547
SVGAnimateElement incorrectly uses Color::nameForRenderTreeAsText()
https://bugs.webkit.org/show_bug.cgi?id=54547
Summary SVGAnimateElement incorrectly uses Color::nameForRenderTreeAsText()
Andreas Kling
Reported 2011-02-16 05:02:00 PST
This is not an issue right now, as we don't interpolate the alpha channel in color animations yet, but should be fixed regardless.
Attachments
Proposed patch (1.64 KB, patch)
2011-02-16 05:02 PST, Andreas Kling
krit: review+
Andreas Kling
Comment 1 2011-02-16 05:02:53 PST
Created attachment 82616 [details] Proposed patch
Dirk Schulze
Comment 2 2011-02-16 05:08:27 PST
Comment on attachment 82616 [details] Proposed patch It's sad that we can't test this, since ColorDistance doesn't support colors with alpha anyway. But Andreas promised to look at it afterwards, didn't you? ;-) r=me
Andreas Kling
Comment 3 2011-02-16 07:02:18 PST
Note You need to log in before you can comment on or make changes to this bug.