2011-02-16  Andreas Kling  <kling@webkit.org>

Reviewed by Dirk Schulze.

        SVGAnimateElement incorrectly uses Color::nameForRenderTreeAsText()
        https://bugs.webkit.org/show_bug.cgi?id=54547

        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::applyResultsToTarget):


Canonical link: https://commits.webkit.org/68683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78703 268f45cc-cd09-0410-ab3c-d52691b4dbfc